--- a/style.css
+++ b/style.css
@@ -1,8 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
+
 * {
     margin: 0;
     padding:0;
 }
 .header { 
-    
+    font-family: 'Montserrat', sans-serif;
+    background-color: whitesmoke;
+    height: 100vh;
 }
 
+
+.header-title {
+    font-size: 70px;
+
+}
+
+
+.title {
+    color: black;
+}
+
+.title-red {
+    color: red;
+}
+
+.title-blue {
+    color: blue;
+}
