--- a/style.css
+++ b/style.css
@@ -51,8 +51,15 @@
     left: 42%;
     top: 10%; 
     z-index: 2;
-
+    transition: 0.5s;
 }
+
+.header-btn:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid black;
+}
+
 
 .header-btn-red {
     background-color: #F97B7B;
@@ -70,4 +77,5 @@
     height: 35px;
     position: relative;
     left: 44%;
+    z-index: 1;
 }
